[gd_scene load_steps=12 format=3 uid="uid://c3mwpe33i5df8"]

[ext_resource type="Script" path="res://spider.gd" id="1_dp8ly"]
[ext_resource type="Texture2D" uid="uid://c7fd2dnboy7hv" path="res://sprites/IMG-20231110-WA0007.png" id="2_plg5t"]
[ext_resource type="Texture2D" uid="uid://dgm4cjwmyj3n6" path="res://controles/derecha.png" id="3_tplmq"]
[ext_resource type="Texture2D" uid="uid://csrtgl0qeufk3" path="res://controles/izquierda .png" id="4_4u1ws"]
[ext_resource type="Texture2D" uid="uid://dtpc7t5ln4pki" path="res://controles/arriba.png" id="5_tyvdd"]
[ext_resource type="Texture2D" uid="uid://dycrr5grroh3o" path="res://controles/abajo.png" id="6_42fsi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mtq5"]
size = Vector2(52, 67)

[sub_resource type="Animation" id="Animation_wx7vv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_eoqgq"]
resource_name = "adelante"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_iy35i"]
resource_name = "retroceder"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxjao"]
_data = {
"RESET": SubResource("Animation_wx7vv"),
"adelante": SubResource("Animation_eoqgq"),
"retroceder": SubResource("Animation_iy35i")
}

[node name="spider" type="CharacterBody2D" groups=["spider"]]
position = Vector2(-456, 28)
collision_mask = 6
motion_mode = 1
script = ExtResource("1_dp8ly")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(545, 628.75)
scale = Vector2(0.25, 0.258488)
texture = ExtResource("2_plg5t")
hframes = 2
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(545, 629.5)
shape = SubResource("RectangleShape2D_5mtq5")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 326)
ignore_rotation = false
process_callback = 0
rotation_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lxjao")
}

[node name="Control1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -219.0
offset_top = 135.0
offset_right = -179.0
offset_bottom = 175.0

[node name="derechaButton" type="TouchScreenButton" parent="."]
position = Vector2(742, 665)
scale = Vector2(0.460784, 0.460784)
texture_normal = ExtResource("3_tplmq")
texture_pressed = ExtResource("3_tplmq")
action = "derechaButton"

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -219.0
offset_top = 135.0
offset_right = -179.0
offset_bottom = 175.0

[node name="izquierdaButton" type="TouchScreenButton" parent="Control2"]
position = Vector2(852, 529)
scale = Vector2(0.460784, 0.460784)
texture_normal = ExtResource("4_4u1ws")
texture_pressed = ExtResource("4_4u1ws")
action = "izquierdaButton"

[node name="Control3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -219.0
offset_top = 135.0
offset_right = -179.0
offset_bottom = 175.0

[node name="arribaButton" type="TouchScreenButton" parent="Control3"]
position = Vector2(908, 475)
scale = Vector2(0.460784, 0.456311)
texture_normal = ExtResource("5_tyvdd")
texture_pressed = ExtResource("5_tyvdd")
action = "arribaButton"

[node name="Control4" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -219.0
offset_top = 135.0
offset_right = -179.0
offset_bottom = 175.0

[node name="abajoButton" type="TouchScreenButton" parent="Control4"]
position = Vector2(908, 529)
scale = Vector2(0.460784, 0.460784)
texture_normal = ExtResource("6_42fsi")
texture_pressed = ExtResource("6_42fsi")
action = "abajoButton"
